página criada e arquivo main.py

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Eu gosto muito de purê de batata, mas batata frita tambem é muito bom
+Eu gosto muito de purê de batata, mas batata frita tambem é muito bom.
